[package]
name = "todo-yew-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name ="todo-yew-rs"
path = "src/main.rs"

[lib]
name ="todo_library"
path = "src/lib.rs"

[dependencies]
yew = "0.19"
gloo = "0.8"
serde = "1.0"
serde_json = "1.0" 
